syntax = "proto3";

package fintekkers.models.portfolio;

import "fintekkers/models/util/local_timestamp.proto";
import "fintekkers/models/util/uuid.proto";

option java_multiple_files = true;

option java_outer_classname = "PortfolioProtos";

message PortfolioProto {
  //1-4 reserved
  string object_class = 1;
  string version = 2;

  //Primary Key
  fintekkers.models.util.UUIDProto uuid = 5;
  fintekkers.models.util.LocalTimestampProto as_of = 6;
  bool is_link = 7;

  util.LocalTimestampProto valid_from = 8;
  util.LocalTimestampProto valid_to = 9;

  string portfolio_name = 10;
}
